comentarios 1282px, home,ourwork,ourworksections

--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -41,7 +41,7 @@ html(class='no-js')
 		//- tester
 		.img-tester
 			//- desk
-			img(src="img/testing/home_desk.jpg", alt="")
+			//- img(src="img/testing/home_desk.jpg", alt="")
 			//- img(src="img/testing/ourWork_desk.jpg", alt="")
 			//- img(src="img/testing/workSections_desk.jpg", alt="")
 			//- img(src="img/testing/project_desk.jpg", alt="")
