--- a/dev/scss/modules/_footer-nav.scss
+++ b/dev/scss/modules/_footer-nav.scss
@@ -24,8 +24,8 @@ footer{
 		height: 94px;
 		padding: 40px 5px;
 	}
-	@media(min-width: 1282px){
-		height: getvw(94vw);
-		padding: getvw(40vw) getvw(5vw);
-	}
+	// @media(min-width: 1282px){
+	// 	height: getvw(94vw);
+	// 	padding: getvw(40vw) getvw(5vw);
+	// }
 }
