--- a/dev/scss/views/_home.scss
+++ b/dev/scss/views/_home.scss
@@ -27,11 +27,11 @@
 		width: 600px;
 		height: 218px;
 	}
-	@media(min-width: 1282px){
-		width: getvw(600vw);
-		height: getvw(218vw);
-		// background: red;
-	}
+	// @media(min-width: 1282px){
+	// 	width: getvw(600vw);
+	// 	height: getvw(218vw);
+	// 	// background: red;
+	// }
 	.display-type{
 		width: 100%;
 		height: 100%;
@@ -53,17 +53,16 @@
 				font-size: 396px;
 				height: 100%;
 			}
-			@media(min-width: 1282px){
-				font-size: getvw(396vw);
-			}
+			// @media(min-width: 1282px){
+			// 	font-size: getvw(396vw);
+			// }
 		}
 			
 		.display-w{
-			// top: -1px;
+			top: -1px;
 			padding-left: 4px;
 			line-height: .33em;
 			height: 91px;
-			// background-color: yellow;
 			@media(min-width: 768px){
 				padding-left: 8px;
 			}
@@ -72,31 +71,28 @@
 				line-height: 0.33em;
 				height: 0.554em;
 			}
-			@media(min-width: 1282px){
-				top: getvw(-1vw);
-				padding-left: getvw(10vw);
-			}
+			// @media(min-width: 1282px){
+			// 	top: getvw(-1vw);
+			// 	padding-left: getvw(10vw);
+			// }
 		}
 		.display-e{
 			top: -1px;
 			right: -3px;
 			line-height: 0.355em;
 			height: 90px;
-			// background-color: green;
 			@media(min-width: 768px){
-				// top: -1px;
 				right: -6px;
 			}
 			@media (min-width: 992px){
 				right: -7px;
 				line-height: 0.355em;
 				height: 0.548em;
-				// top: -1px;
 			}
-			@media(min-width: 1282px){
-				// top: getvw(-2.5vw);
-				right: getvw(-7vw);
-			}
+			// @media(min-width: 1282px){
+			// 	top: getvw(-1vw)
+			// 	right: getvw(-7vw);
+			// }
 		}
 	}
 
@@ -105,7 +101,6 @@
 		position: absolute;
 		width: 112px;
 		height: 48px;
-		// background-color: green;
 		top: 10px;
 		left: 24px;
 		@media(min-width: 768px){
@@ -120,13 +115,12 @@
 			top: 29px;
 			left: inherit;
 		}
-		@media(min-width: 1282px){
-			width: getvw(286vw);
-			height: getvw(94vw);
-			top: getvw(29vw);
-		}
+		// @media(min-width: 1282px){
+		// 	width: getvw(286vw);
+		// 	height: getvw(94vw);
+		// 	top: getvw(29vw);
+		// }
 
-		// span section (copy)
 		.span-container{
 			position: relative;
 			width: 100%;
@@ -134,37 +128,30 @@
 			font-family: 'Nocturne Serif ExtraBold';
 			font-size: 28px;
 			color: $cream;
-			// background: green;
 			@media(min-width: 768px){
 				font-size: 52px;
 			}
 			@media(min-width: 992px){
 				font-size: 62px;
 			}
-			@media(min-width: 1282px){
-				font-size: getvw(62vw);
-			}
+			// @media(min-width: 1282px){
+			// 	font-size: getvw(62vw);
+			// }
 			span{
 				position: absolute;
 				line-height: 0;
-				// Create
 				&:first-child{
 					display: inline-block;
 					top: 9px;
 					left: 0px;
-					// animation-delay:120ms;
 				}
-				// &
 				&:nth-child(2){
 					font-family: 'TitlingGothicFB light';
 					font-size: 15px;
 					top: 14px;
 					right: -2px;
-					// animation-delay:150ms;
 				}
-				// Consult
 				&:nth-child(3){
-					// animation-delay:150ms;
 					bottom: 11px;
 					left: 0;
 				}
@@ -199,19 +186,19 @@
 						left:inherit;
 					}
 				}
-				@media(min-width: 1282px){
-					&:first-child{
-						top: getvw(20vw);
-					}
-					&:nth-child(2){
-						font-size: getvw(32vw);
-						left: getvw(1vw);
-						bottom: getvw(14vw);
-					}
-					&:nth-child(3){
-						bottom: getvw(23vw);
-					}
-				}
+				// @media(min-width: 1282px){
+				// 	&:first-child{
+				// 		top: getvw(20vw);
+				// 	}
+				// 	&:nth-child(2){
+				// 		font-size: getvw(32vw);
+				// 		left: getvw(1vw);
+				// 		bottom: getvw(14vw);
+				// 	}
+				// 	&:nth-child(3){
+				// 		bottom: getvw(23vw);
+				// 	}
+				// }
 			}
 		}
 		.line-item{
@@ -225,13 +212,13 @@
 				width: 56px;
 				bottom: -48px;
 				left: 25%;
-				// transform: rotate(90deg);
 			}
-			@media(min-width: 1282px){
-				width: getvw(90vw);
-				height: vw(2vw);
-				right: getvw(-103vw);
-			}
+			// @media(min-width: 1282px){
+			// 	width: getvw(56vw);
+			// 	height: vw(2vw);
+			// 	right: getvw(-103vw);
+			// 	bottom: getvw(-48vw);
+			// }
 			.lines-wrapper{
 				position: relative;
 				background-color: $cream;
@@ -242,7 +229,6 @@
 			}
 		}
 	}
-	// information about
 	.about-title{
 		color: $cream;
 		font-size: 10px;
@@ -288,20 +274,20 @@
 			bottom: -4px;
 			line-height: 16px;
 		}
-		@media(min-width: 1282px){
-			right: getvw(-3vw);
-			width: getvw(200vw);
-			font-size: getvw(14vw);
-			bottom: getvw(-4vw);
-			line-height: getvw(16vw);
-			.points{
-				right: getvw(3vw);
-				bottom: getvw(4vw);
-				font-size: getvw(20vw);
-				width: getvw(14vw);
-				height: getvw(8vw);
-			}
-		}
+		// @media(min-width: 1282px){
+		// 	right: getvw(-3vw);
+		// 	width: getvw(200vw);
+		// 	font-size: getvw(14vw);
+		// 	bottom: getvw(-4vw);
+		// 	line-height: getvw(16vw);
+		// 	.points{
+		// 		right: getvw(3vw);
+		// 		bottom: getvw(4vw);
+		// 		font-size: getvw(20vw);
+		// 		width: getvw(14vw);
+		// 		height: getvw(8vw);
+		// 	}
+		// }
 	}
 	&:hover{
 		.display-type h2{
@@ -319,15 +305,11 @@
 			.lines-wrapper{
 				opacity: 1;
 				transform: scaleX(.4);
-				// -webkit-animation: line-reduce .55s cubic-bezier(.25,0,0,.15) forwards;
-				// animation: line-reduce .55s cubic-bezier(.25,0,0,.15) forwards;
 			}
 		}
 		.about-title{
 			-webkit-animation: display-text .55s cubic-bezier(.25,0,0,.15) forwards;
 			animation: display-text .55s cubic-bezier(.25,0,0,.15) forwards;
-			// p{
-			// }
 		}
 	}
 }
