--- a/dev/scss/views/_ourwork-sections.scss
+++ b/dev/scss/views/_ourwork-sections.scss
@@ -34,9 +34,10 @@
 		float: right;
 		white-space: nowrap;
 	}
-	@media(min-width: 1282px){
-		padding: 0 getvw(10vw);
-	}
+	// @media(min-width: 1282px){
+	// 	min-height: getvw(277vw);
+	// 	padding: 0 getvw(10vw);
+	// }
 	&.full-screen{
 		height: 100vh;
 	}
@@ -49,15 +50,15 @@
 		flex-direction: column;
 		flex-wrap: nowrap;
 		@media(min-width: 768px){
+			width: 100%;
 			margin-bottom:0;
 			margin-left: 0;
 			margin-top: 76px;
-			width: 100%;
 			display: block;
 		}
-		@media(min-width: 1282px){
-			margin-top: getvw(76vw);
-		}
+		// @media(min-width: 1282px){
+		// 	margin-top: getvw(76vw);
+		// }
 	}
 	.about-work{
 		position: relative;
@@ -70,31 +71,31 @@
 		.subtitle-wrapper{
 			position: absolute;		
 			width: 55.55%;
-			top: 0;
 			height: 56px;
+			top: 0;
 			display: block;
 			h2{
-				font-family: 'TitlingGothicFB Standard';
-				font-size: 12px;
-				font-weight: 100;
-				bottom: 6px;
 				position: absolute;
+				font-family: 'TitlingGothicFB Standard';
+				font-weight: 100;
+				font-size: 12px;
+				bottom: 6px;
 				z-index: 10;
 			}
 			@media(min-width: 768px){
-				height: 70px;
 				width: 74%;
+				height: 70px;
 				h2{
 					font-family: 'TitlingGothicFB light';
 					bottom: 0;
 				}
 			}
-			@media(min-width: 1282px){
-				height: getvw(70vw);
-				h2{
-					font-size: getvw(12vw);
-				}
-			}
+			// @media(min-width: 1282px){
+			// 	height: getvw(70vw);
+			// 	h2{
+			// 		font-size: getvw(12vw);
+			// 	}
+			// }
 		}
 		.title-wrapper{
 			position: absolute;
@@ -102,38 +103,38 @@
 			bottom: 0;
 			height: 41px;
 			h1{
+				position: absolute;
 				font-family: 'Nocturne Serif ExtraBold';
 				font-size: 22px;
 				letter-spacing: .02em;
-				position: absolute;
 				z-index: 10;
 				width: 100%;
 				height: 100%;
 			}
 			@media(min-width: 768px){
-				height: 58px;
 				width: 100%;
+				height: 58px;
 				h1{
 					font-size: 30px;
 				}
 			}
-			@media(min-width: 1282px){
-				height: getvw(58vw);
-				h1{
-					font-size: getvw(30vw)
-				}
-			}
+			// @media(min-width: 1282px){
+			// 	height: getvw(58vw);
+			// 	h1{
+			// 		font-size: getvw(30vw)
+			// 	}
+			// }
 		}
 		span{
 			font-family: 'TitlingGothicFB light';
 			font-size: 120px;
-			color: $black;
+			letter-spacing: .02em;
 			line-height: 120px;
 			height: 97px;
+			color: $black;
 			position: relative;
 			display: block;
 			padding-left: 46px;
-			letter-spacing: .02em;
 			animation-duration: 1500ms;
 			animation-delay:50ms;
 			@media(min-width: 768px){
@@ -142,16 +143,16 @@
 				height: 134px;
 				padding-left: 24%
 			}
-			@media(min-width: 1282px){
-				font-size: getvw(165vw);
-				line-height: getvw(165vw);
-				height: getvw(134vw);
-			}
+			// @media(min-width: 1282px){
+			// 	font-size: getvw(165vw);
+			// 	line-height: getvw(165vw);
+			// 	height: getvw(134vw);
+			// }
 		}
 	}
 	.arrow-container{
-		display: inherit;
 		position: relative;
+		display: inherit;
 		margin-top: 21px;
 		animation-delay:175ms;
 		.arrow-right{
@@ -159,12 +160,12 @@
 			transform: translateX(-20px);
 		}
 		@media(min-width: 768px){
-			margin-left: 8.8%;
-			margin-top: 0;
 			width: auto;
 			display: inline-flex;
 			float:left;
 			top: 68%;
+			margin-left: 8.8%;
+			margin-top: 0;
 			.arrow-right{
 				transform: translateX(0);
 			}
