Projects UI: url de imagenes corregida.

--- a/dev/assets/project-brand-beams.pug
+++ b/dev/assets/project-brand-beams.pug
@@ -26,12 +26,12 @@ block content
 						p The crew gets its name from the fact that drivers in Dubai flash their high beams at you when you’re driving too slow. And since the crew can’t run outdoors throughout the year, they installed a weekly gym session called Saturday Brunch - brunches being another “Dubai thing”.
 						p Finally, with crew members from all over the world, with different backgrounds, languages, etc., the ethos of the crew is Vibes First. Because if the vibes are right, people can definitely connect, train and party together.
 			.p-photo1
-				img(src="../img/project-img-1.jpg", alt="")
+				img(src="./img/project-img-1.jpg", alt="")
 			.img-wrapper
 				.p-photo3
-					img(src="../img/project-img-3.jpg", alt="")
+					img(src="./img/project-img-3.jpg", alt="")
 				.p-photo2
-					img(src="../img/project-img-2.jpg", alt="")
+					img(src="./img/project-img-2.jpg", alt="")
 			include _modules/slider.pug
 			section.video-wrapper.snj-col-12
 				video(src="")
