--- a/dev/assets/project-brand-cred.pug
+++ b/dev/assets/project-brand-cred.pug
@@ -26,12 +26,12 @@ block content
 						p The final designs were eventually featured on Hypebae. Have we seen a streetwear brand and credit card company join forces yet? No, but maybe streetwear or sneaker cryptocurrency will actually be the next thing.
 						p What we’ll certainly continue doing is creating anything, whether it’s a one off project or an entire series, simply because we feel it should exist in the world.
 			.p-photo1
-				img(src="../img/project-img-1.jpg", alt="")
+				img(src="./img/project-img-1.jpg", alt="")
 			.img-wrapper
 				.p-photo3
-					img(src="../img/project-img-2.jpg", alt="")
+					img(src="./img/project-img-2.jpg", alt="")
 				.p-photo2
-					img(src="../img/project-img-3.jpg", alt="")
+					img(src="./img/project-img-3.jpg", alt="")
 			include _modules/slider.pug
 
 			section.video-wrapper.snj-col-12
