--- a/dev/assets/project-event-puma.pug
+++ b/dev/assets/project-event-puma.pug
@@ -25,12 +25,12 @@ block content
 						p The following year, we celebrated International Women’s Day by capturing the beautiful diversity of women in Dubai in the most inclusive way we could think of. Often brands will have target the same groups or expats because of their consumer strength in the country.
 						p For International Women’s Day, that wasn’t good enough for us. Instead, we celebrated nearly 30 different women, and their respective nationalities, as it’s this type of diversity that makes Dubai so special. Each woman was shot for their own portrait, with makeup colors from their particular country, and then displayed every single portrait at a party that featured an all-female DJ lineup.
 			.p-photo1
-				img(src="../img/project-img-1.jpg", alt="")
+				img(src="./img/project-img-1.jpg", alt="")
 			.img-wrapper
 				.p-photo3
-					img(src="../img/project-img-2.jpg", alt="")
+					img(src="./img/project-img-2.jpg", alt="")
 				.p-photo2
-					img(src="../img/project-img-3.jpg", alt="")
+					img(src="./img/project-img-3.jpg", alt="")
 			include _modules/slider.pug
 			section.video-wrapper.snj-col-12
 				video(src="")
