--- a/dev/assets/project-manage-coffee.pug
+++ b/dev/assets/project-manage-coffee.pug
@@ -28,12 +28,12 @@ block content
 
 						p No easy task with so many coffee shops out there, but we stand by our ambition, and its outcome, which includes a Narcos inspired mixed media video, a one take video narrated by the founder and countless photos we would put up against any coffee shop around. 
 			.p-photo1
-				img(src="../img/project-img-1.jpg", alt="")
+				img(src="./img/project-img-1.jpg", alt="")
 			.img-wrapper
 				.p-photo3
-					img(src="../img/project-img-2.jpg", alt="")
+					img(src="./img/project-img-2.jpg", alt="")
 				.p-photo2
-					img(src="../img/project-img-3.jpg", alt="")
+					img(src="./img/project-img-3.jpg", alt="")
 			include _modules/slider.pug
 
 			section.video-wrapper.snj-col-12
