--- a/dev/assets/project-manage-puma.pug
+++ b/dev/assets/project-manage-puma.pug
@@ -28,12 +28,12 @@ block content
 
 						p In just a few years, the account reached over 100k followers and continues to “put on” for the region’s talent, from photographers to musicians. It’s a project, and relationship, that has significantly helped establish our place in the market. More importantly, it has helped strengthen our relationship with the regional community of athletes, artists and creatives that we consider peers and allies. 
 			.p-photo1
-				img(src="../img/project-img-1.jpg", alt="")
+				img(src="./img/project-img-1.jpg", alt="")
 			.img-wrapper
 				.p-photo3
-					img(src="../img/project-img-2.jpg", alt="")
+					img(src="./img/project-img-2.jpg", alt="")
 				.p-photo2
-					img(src="../img/project-img-3.jpg", alt="")
+					img(src="./img/project-img-3.jpg", alt="")
 			include _modules/slider.pug
 
 			section.video-wrapper.snj-col-12
