--- a/dev/assets/project-social-suede.pug
+++ b/dev/assets/project-social-suede.pug
@@ -28,12 +28,12 @@ block content
 						p Now an entire region of creatives have a way to continually share ideas and work with PUMA. It’s already led to dozens of co-creations and will continue to do so while the site is live. It’s the type of access and opportunity our younger selves dreamed of, and we’re proud to pay it forward to this generation and beyond.
 
 			.p-photo1
-				img(src="../img/project-img-1.jpg", alt="")
+				img(src="./img/project-img-1.jpg", alt="")
 			.img-wrapper
 				.p-photo3
-					img(src="../img/project-img-2.jpg", alt="")
+					img(src="./img/project-img-2.jpg", alt="")
 				.p-photo2
-					img(src="../img/project-img-3.jpg", alt="")
+					img(src="./img/project-img-3.jpg", alt="")
 			include _modules/slider.pug
 			
 			section.video-wrapper.snj-col-12
