--- a/dev/assets/project-social-power.pug
+++ b/dev/assets/project-social-power.pug
@@ -29,12 +29,12 @@ block content
 
 						p When competitors went mainstream, we went underground. It’s made the difference ever since. 
 			.p-photo1
-				img(src="../img/project-img-1.jpg", alt="")
+				img(src="./img/project-img-1.jpg", alt="")
 			.img-wrapper
 				.p-photo3
-					img(src="../img/project-img-2.jpg", alt="")
+					img(src="./img/project-img-2.jpg", alt="")
 				.p-photo2
-					img(src="../img/project-img-3.jpg", alt="")
+					img(src="./img/project-img-3.jpg", alt="")
 			include _modules/slider.pug
 			
 			section.video-wrapper.snj-col-12
